fix warnings for geonetwork import, do not use resource for urls